[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project. Set of five console games."
authors = ["pavelpminaev <pavelpminaev@gmail.com>"]
repository = "https://github.com/pavelpminaev/python-project-lvl1.git"
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: Freeware",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Topic :: Games/Entertainment"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
